<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/layout">

        <ListPreference
            android:defaultValue="gird"
            android:entries="@array/layout_mode_entries"
            android:entryValues="@array/layout_mode_entry_values"
            android:icon="@drawable/ic_setting_layout"
            android:key="layout_mode"
            android:title="Layout Mode"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Notification">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_setting_new_release_to_day"
            app:key="release_remindr"
            app:summary="reminder showing the move that released today"
            app:title="Release Reminder"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:icon="@drawable/ic_setting_daily_reminder"
            app:key="daily_reminder"
            app:summary="reminder for return to app"
            app:title="Daily Reminder"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/language_setting">
        <Preference
            app:icon="@drawable/ic_setting_language"
            app:key="@string/key_language"
            app:title="@string/set_language"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
