<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_movies">

    <!-- MOVIES -->
    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.e.myapplication.ui.movie_tv.MovieTvFragment"
        android:label="@string/movies"
        tools:layout="@layout/tv_show">
        <action
            android:id="@+id/action_moviesFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/zoom_in"
            app:exitAnim="@anim/zoom_out"
            app:popExitAnim="@anim/zoom_out" />
    </fragment>

    <!-- TV SHOW -->
    <fragment
        android:id="@+id/navigation_tv_show"
        android:name="com.e.myapplication.ui.movie_tv.MovieTvFragment"
        android:label="@string/tv_show"
        tools:layout="@layout/tv_show">
        <action
            android:id="@+id/action_tvShowFragment_to_detailFragment"
            app:destination="@id/detailFragment"
            app:enterAnim="@anim/zoom_in"
            app:exitAnim="@anim/zoom_out"
            app:popExitAnim="@anim/zoom_out" />
    </fragment>

    <!-- FAVORITE -->
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.e.myapplication.ui.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/favorite">
        <action
            android:id="@+id/action_navigation_favorite_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <!-- DETAIL -->
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.e.myapplication.ui.detail.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/detail">
        <argument
            android:name="data"
            app:argType="com.e.myapplication.db.themoviedb.dto.ResultData"
            app:nullable="true" />
    </fragment>
</navigation>